--- a/index.html
+++ b/index.html
@@ -4,11 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amazon</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    <p>
-        hello
-    </p>
+    <header>
+        <div class="navbar">
+            <!-- 1 -->
+            <div class="nav-logo border">
+                <div class="logo"></div>
+            </div>
+            <!-- 2 -->
+            <div class="nav-address border">
+                <p class = "deliver-to"> Deliver to</p>
+                <div class="address-icon">
+                    <i class="fa-solid fa-location-dot"></i>
+                    <p class = "India">India</p>
+                </div>
+            </div>
+            <!-- 3 -->
+             <div class="nav-search border">
+                <select class="search-select">
+                    <option>All</option>
+                </select>
+                <input class="search-input" placeholder="Search Amazon">
+                <div class="search-icon">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+             </div>
+             <!-- 4 -->
+            <div class="nav-signin">
+                <p><span>Hello, sign in</span></p>
+                <p class="nav-second">Account & List</p>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
