--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <!-- 3 -->
-             <div class="nav-search border">
+             <div class="nav-search ">
                 <select class="search-select">
                     <option>All</option>
                 </select>
@@ -33,11 +33,46 @@
                 </div>
              </div>
              <!-- 4 -->
-            <div class="nav-signin">
+            <div class="nav-signin border">
                 <p><span>Hello, sign in</span></p>
                 <p class="nav-second">Account & List</p>
             </div>
+            <!-- 5 box -->
+            <div class="nav-return border">
+                <p><span>Returns</span></p>
+                <p class="nav-second">& Orders</p>
+            </div>
+            <div class="nav-cart border">
+                <i class="fa-solid fa-cart-shopping"></i>
+                cart
+            </div>
+        </div>
+        <div class="panel">
+            <div class="panel-all border ">
+                <i class="fa-solid fa-bars"></i>
+                ALL
+            </div>
+            <div class="panel-option ">
+                <p class="border">Today's Deals</p>
+                <p class="border">Registry</p> 
+                <p class="border" >Prime Video</p>
+                <p class="border" >Gift Cards</p>
+                <p class="border" >Customer Service</p>
+                <p class="border">Sell</p>
+            </div>
+            <div class="panel-deals border">
+                Shop deals in Electronics
+            </div>
         </div>
     </header>
+    <div class="main-section">
+        <div class="transparent"></div>
+    </div>
+     <div class="shop-section">  
+        <div class="box1 box">box1</div>
+        <div class="box2 box">box1</div>
+        <div class="box3 box">box1</div>
+        <div class="box4 box">box1</div>
+    </div>
 </body>
 </html>
