--- a/index.html
+++ b/index.html
@@ -69,10 +69,115 @@
         <div class="transparent"></div>
     </div>
      <div class="shop-section">  
-        <div class="box1 box">box1</div>
-        <div class="box2 box">box1</div>
-        <div class="box3 box">box1</div>
-        <div class="box4 box">box1</div>
+        <div class="box1 box">
+            <div class="box-content">
+            <H2>Beauty picks</H2>
+            <div class="box-image" style="background-image: url('box1_image.jpg');" ></div>
+            <p>see more</p>
+            </div>
+        </div>
+        <div class="box2 box">
+            <div class="box-content">
+            <H2>Health and Personal Care</H2>
+            <div class="box-image" style="background-image: url('box2_image.jpg');" ></div>
+            <p>see more</p>
+            </div>
+        </div>
+        <div class="box3 box">
+            <div class="box-content">
+            <H2>Furniture</H2>
+            <div class="box-image" style="background-image: url('box3_image.jpg');" ></div>
+            <p>see more</p>
+            </div>
+        </div>
+        <div class="box4 box">
+            <div class="box-content">
+            <H2>Electronic gadgets</H2>
+            <div class="box-image" style="background-image: url('box4_image.jpg');" ></div>
+            <p>see more</p>
+            </div>
+        </div>
+        
+        <div class="box5 box">
+            <div class="box-content">
+            <H2>Clothes</H2>
+            <div class="box-image" style="background-image: url('box5_image.jpg');" ></div>
+            <p>see more</p>
+            </div>
+        </div>
+        <div class="box6 box">
+            <div class="box-content">
+            <H2>Pet care</H2>
+            <div class="box-image" style="background-image: url('box6_image.jpg');" ></div>
+            <p>see more</p>
+            </div>
+        </div>
+        <div class="box7 box">
+            <div class="box-content">
+            <H2>New Arrival in Toys</H2>
+            <div class="box-image" style="background-image: url('box7_image.jpg');" ></div>
+            <p>see more</p>
+            </div>
+        </div>
+        <div class="box8 box">
+            <div class="box-content">
+            <H2>Discover Fasion Trends</H2>
+            <div class="box-image" style="background-image: url('box8_image.jpg');" ></div>
+            <p>see more</p>
+            </div>
+        </div>
     </div>
+    <footer>
+        <div class="foot-panel1">Back to top</div>
+        <div class="foot-panel2">
+            <ul>
+                <p>Get to Know Us</p>
+                <a>About Amazon</a>
+                <a>Careers</a>
+                <a>Press Releases</a>
+                <a>Amazon Science</a>
+            </ul>
+            <ul>
+                <p>Get to Know Us</p>
+                <a>Facebook</a>
+                <a>Twitter</a>
+                <a>Instagram</a>
+            </ul>
+            <ul>
+                <p>Make Money with Us</p>
+                <a>Sell on Amazon</a>
+                <a>Sell under Amazon Accelerator</a>
+                <a>Protect and Build Your Brand</a>
+                <a>Supply to Amazon</a>
+                <a>Become an Affiliate</a>
+                <a>Fulfilment by Amazon</a>
+                <a>Advertise Your Products</a>
+                <a>Amazon Pay on Merchants</a>
+            </ul>
+            <ul>
+                <p>Let Us Help You</p>
+                <a>Your Account</a>
+                <a>Returns Centre</a>
+                <a>Recalls and Product Safety Alerts</a>
+                <a>100% Purchase Protection</a>
+                <a>Amazon App Download</a>
+                <a>Help</a>
+            </ul>
+        </div>
+        <div class="foot-panel3">
+            <div class="logo"></div>
+        </div>
+        <div class="foot-panel4">
+            <div class="pages">
+                <a>Condition of Use</a>
+                <a>Privacy Notice</a>
+                <a>Consumer Health Data Privacy Disclosure  </a>
+                <a> Your Ads Pricacy Choices</a>
+            </div>
+            <div class="copyrighht">
+                 © 1996-2025, Amazon.com, Inc. or its affiliates
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
